yuwen courseware update lesson 1

--- a/Daxuu/WebContent/courseware/yuwen.html
+++ b/Daxuu/WebContent/courseware/yuwen.html
@@ -1,46 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="keywords"
+	content="名师课件;名校课堂;家庭教师;家教;私人教师;教学;预习;复习;练习;作业;电脑教学;网校;小学;中学;大学;>
+<meta name="
+	description" content="Daxuu如同您的私人家庭教师,辅助完成学习任务,重拾学习兴趣,掌握学习方法,改变学习方式,终身重视学习.大学网:网络教学平台,终身学习校园,有容乃大,学无止境.大学平台学知识,学校社会练能力">
 <meta charset="utf-8">
 <title>Courseware</title>
 <script src="../assets/jwplayer/jwplayer.js"></script>
 
 </head>
+
 <body>
-<div id='my-video'></div>
-<script type='text/javascript'>
-    jwplayer('my-video').setup({
-        file: 'test.swf',
-        width: '480',
-        height: '270'
-    });
-</script>
+	<header> </header>
+	<section>
+		<div id='my-video'></div>
+		<script type='text/javascript'>
+			jwplayer('my-video').setup({
+				playlist : [ {
+					image : "2008102465928439_2.jpg",
+					sources : [ {
+						file : 'chuntian.mp3',
+						width : 1280,
+						height : 720
+					} ],
+					title : "春天"
+				}, {
+					image : "200841171527602_2.jpg",
+					sources : [ {
+						file : "1997012364.aac",
+						width : 1280,
+						height : 720
+					} ],
+					title : "春光美"
+				} ],
+				width : 1024,
+				height : 360
 
-<div>
-<ul>
-<li>
-生字生词
-</li>
-<li>
-文意体验
-</li>
-<li>
-读书心得/写法
-</li>
-<li>
-关联阅读
-</li>
-<li>
-参考资源
-</li>
-<li>
-自我检测
-</li>
-<li>
-交流讨论
-</li>
-</ul>
+			});
+		</script>
+		<div>
+			<ul>
+				<li>原文
 
-</div>
+					<p>
+						<span>找春天</span><br>春天来了！春天来了！<br>我们几个孩子，脱掉棉袄，冲出家门，奔向田野，去寻找春天。<br>春天像个害羞的小姑娘，遮遮掩掩，躲躲藏藏。我们仔细地找啊，找啊。<br>小草从地下探出头来，那是春天的眉毛吧？<br>早开的野花一朵两朵，那是春天的眼睛吧？<br>树木吐出点点嫩芽，那是春天的音符吧？<br>解冻的小溪丁丁冬冬，那是春天的琴声吧？<br>春天来了！我们看到了她，我们听到了她，我们闻到了她，我们触到了她。她在柳枝上荡秋千，在风筝尾巴上摇啊摇；她在喜鹊、杜鹃嘴里叫，在桃花、杏花枝头笑……
+
+					</p>
+				</li>
+				<li>生字生词 <span>触到</span><br> <span>音符</span><br> <span>嫩芽</span><br>
+					<span>探出</span><br> <span>杜鹃</span><br> <span>喜鹊</span><br>
+				</li>
+				<li>文意体验</li>
+				<li>读书心得/写法</li>
+				<li>关联阅读</li>
+				<li>参考资源
+					<p>歌曲名：春光美 我们在回忆 说着那冬天 在冬天的山巅 露出春的生机 我们的故事 说着那春天 在春天的好时光
+						留在我们的心里 我们慢慢说着过去 微风吹走冬的寒意 我们眼里的春天 有一种神奇 啊 这就是春天的美丽 我们在回忆 说着那冬天
+						在冬天的山巅 露出春的生机 我们的故事 说着那春天 在春天的好时光 留在我们的心里 一遍一遍甜蜜回忆 春天带来真诚友谊
+						我们眼里的春天 有一种欢喜 啊 这就是春天的美丽 啊 这就是春天的美丽</p>
+				</li>
+				<li>自我检测</li>
+				<li>交流讨论</li>
+			</ul>
+
+		</div>
+	</section>
+	<footer> </footer>
 </body>
 </html>
