--- a/Daxuu/WebContent/template.html
+++ b/Daxuu/WebContent/template.html
@@ -4,16 +4,18 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="keywords"
-	content="课件;家庭教师;家教;私人教师;教学;电脑教学;网校;小学;中学;大学;>
-<meta name="description"
-	content="Infragistics is your source for User Interface (UI) controls and components for .NET, ASP.NET, Windows Forms, WPF, Silverlight, jQuery, ASP.NET MVC, Reporting and Mobile.">
-
+	content="名师课件;名校课堂;家庭教师;家教;私人教师;教学;预习;复习;练习;作业;电脑教学;网校;小学;中学;大学;>
+<meta name="description" content="Daxuu如同您的私人家庭教师,辅助完成学习任务,重拾学习兴趣,掌握学习方法,改变学习方式,终身重视学习.大学网:网络教学平台,终身学习校园,有容乃大,学无止境.大学平台学知识,学校社会练能力">
 <meta charset="utf-8">
 <title>Courseware</title>
-
 </head>
-</head>
-<body>Hello Word
 
+<body>
+<header>
+</header>
+<section>
+</section>
+<footer>
+</footer>
 </body>
 </html>
