--- a/Daxuu/WebContent/index.html
+++ b/Daxuu/WebContent/index.html
@@ -27,9 +27,9 @@
 
 	<header class="top_nav">
 		<section>
-			<a href="/elearning/index.html"><img src="assets/images/logo.png" alt="GO HOME"
+			<a href="index.html"><img src="assets/images/logo.png" alt="GO HOME"
 				id="logo" class="left" height="36" width="200"> </a> <input
-				id="top_q" name="q" class="search_box"><button class="ui-icon ui-icon-search">查找...</button>
+				id="top_q" name="q" class="search_box"><button><span class="ui-icon ui-icon-search">...</span></button>
 			<nav id="main_nav_container" class="right">
 				<div>
 					<ul id="mini_nav">
