--- a/Daxuu/WebContent/watch.html
+++ b/Daxuu/WebContent/watch.html
@@ -27,7 +27,7 @@
 
 	<header class="top_nav">
 		<section>
-			<a href="/elearning/index.html"><img src="assets/images/logo.png" alt="GO HOME"
+			<a href="index.html"><img src="assets/images/logo.png" alt="GO HOME"
 				id="logo" class="left" height="36" width="200"> </a> <input
 				id="top_q" name="q" class="search_box"><button class="ui-icon ui-icon-search">查找...</button>
 			<nav id="main_nav_container" class="right">
